# heliostat

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md
lin_guider/: CMakeLists.txt
lin_guider/arch/: server.cpp  server.h  utils.h
main/: CMakeLists.txt  image_processing.cpp  image_processing.h  main.bak  main.cpp  ser.cpp  ser.h  telescope.cpp  telescope.h
